[gd_scene load_steps=8 format=3 uid="uid://ccjbm4ipfvjfr"]

[ext_resource type="Script" path="res://scripts/projectiles/star.gd" id="1_qcge2"]
[ext_resource type="PackedScene" uid="uid://3miicp8y7p5b" path="res://scenes/shared/multi_hitbox.tscn" id="2_htd0n"]
[ext_resource type="Texture2D" uid="uid://brrstl2swlmeo" path="res://assets/projectiles/anny_star_sheet.png" id="3_vvps6"]
[ext_resource type="Script" path="res://scripts/shared/collab_cooldown_timer.gd" id="4_ut6m7"]

[sub_resource type="Animation" id="Animation_cikmo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ighqt"]
resource_name = "explosion"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vyifi"]
_data = {
"RESET": SubResource("Animation_cikmo"),
"explosion": SubResource("Animation_ighqt")
}

[node name="Star" type="Node2D"]
script = ExtResource("1_qcge2")

[node name="MultiHitbox" parent="." instance=ExtResource("2_htd0n")]
collision_mask = 4
owned_by = 1

[node name="CollisionPolygon2D" parent="MultiHitbox" index="0"]
polygon = PackedVector2Array(-1, -3, -4, -1, -4, 0, -3, 3, 2, 3, 3, 0, 3, -1, 0, -3)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_vvps6")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vyifi")
}

[node name="ChargedDamageTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource("4_ut6m7")

[connection signal="self_destruct" from="MultiHitbox" to="." method="_on_multi_hitbox_self_destruct"]
[connection signal="timeout" from="ChargedDamageTimer" to="." method="_on_charged_damage_timer_timeout"]

[editable path="MultiHitbox"]
